--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.3",
+    "@hookform/resolvers": "^3.1.1",
     "@next/font": "^13.4.19",
     "@radix-ui/react-accessible-icon": "^1.0.1",
     "@radix-ui/react-accordion": "^1.1.0",
