--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.8.0",
+    "react-scroll": "^1.9.0",
     "rss": "^1.2.2",
     "sass": "^1.62.1",
     "shadcn-ui": "^0.3.0",
